--- a/static/styles/portico/portico_signin.css
+++ b/static/styles/portico/portico_signin.css
@@ -18,6 +18,12 @@ html {
 .white-box {
     position: relative;
     padding: 30px;
+
+    @media (width <= 768px) {
+        padding: 30px 20px;
+    }
+
+    margin: auto;
     min-width: 0;
 
     background-color: hsl(0, 0%, 100%);
@@ -468,6 +474,10 @@ html {
             &:focus {
                 border: 1px solid hsl(0, 0%, 53%);
             }
+
+            @media (width <= 425px) {
+                padding: 10px 0 10px 12px;
+            }
         }
 
         input[type="email"] {
@@ -549,11 +559,16 @@ html {
     }
 
     .lead {
+        padding-top: 50px;
         margin: 0;
     }
 
     .inline-block {
         text-align: left;
+
+        @media (width <= 425px) {
+            text-align: center;
+        }
     }
 
     .contact-admin p.invite-hint {
@@ -1220,7 +1235,6 @@ button#register_auth_button_gitlab {
     .app-main.goto-account-page-container,
     .app-main.forgot-password-container {
         display: inline-block;
-        padding: 20px;
         width: calc(100% - 40px);
     }
 
